<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentContainer"
    android:background="@color/string_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/book_title_label" />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="16dp"
        android:gravity="center"
        android:text="@string/book_utor_label" />
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="16dp"
        android:text="@string/publish_label" />


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="150dp"
        android:layout_marginRight="16dp"
        android:text="@string/kod_book_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="180dp"
        android:layout_marginRight="16dp"
        android:text="@string/count_page_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="210dp"
        android:layout_marginRight="16dp"
        android:text="@string/hardcover_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="16dp"
        android:text="@string/publish_title_label" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="330dp"
        android:layout_marginRight="16dp"
        android:text="@string/adres_publish_label" />



    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="16dp"
        android:text="@string/site_publish_label" />


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="360dp"
        android:layout_marginRight="16dp"
        android:text="@string/book_details_label" />

    <CheckBox

        android:id="@+id/book_readed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="500dp"
        android:layout_marginRight="56dp"
        android:text="@string/book_readed_label"
        />

</FrameLayout>